--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>极速3D立体式图片相册切换效果</title> 
+<title>3D相册(红颜为谁灬将臣  蹲马桶王子  Spake丶C  大胃红)</title> 
 <style type="text/css">
 html {
  overflow:hidden; 
